# AGCH-Improvement

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/experiments/: ablation_bce_only.yaml  ablation_fusion.yaml  ablation_hash.yaml  ablation_hash_128.yaml  ablation_hash_256.yaml  ablation_hash_32.yaml  ablation_hash_64_rerun.yaml  ablation_no_decompose.yaml  ablation_no_hash.yaml  baseline.yaml  baseline_with_hash.yaml  cv_experiment.yaml  grid_search.yaml  siglip2_mlp_baseline.yaml
configs/hardware/: rtx5080_16gb.yaml
docs/: COMPLETE_TECHNICAL_MANUAL.md  EXPERIMENT_REPORT.md  QUICK_START_5FOLD_CV.md  cep_analysis_report.md  setup-guide.md  siglip2_multimodal_hash_5fold_cv_plan_v2.3_AGCH.md
docs/old/: siglip2_multimodal_hash_5fold_cv_plan_v2.3_AGCH.md  siglip2_multimodal_hash_knn_complete_plan.md  siglip2_multimodal_hash_knn_complete_plan_v2.1_rtx5080.md  siglip2_multimodal_hash_knn_complete_plan_v2.2_AGCH.md
docs/suggestions/: ACTION_PLAN.md  EXPERIMENT_ANALYSIS_REPORT.md  IMPROVEMENT_IMPLEMENTATION_PLAN.md
scripts/: aggregate_cv_results.py  analyze_ablation_result.py  analyze_dataset.py  build_knn_index.py  create_dataset_index.py  create_kfold_split.py  download_coco.sh  download_karpathy_split.py  evaluate.py  monitor_training.sh  organize_checkpoints.py  run_5fold_cv.sh  run_ablation.sh  temp_aggregate_results.py  test_on_holdout.py  test_siglip2.py  train.py  train_baseline.py  train_old.py  verify_setup.py
src/siglip2_multimodal_hash/: __init__.py  baseline_model.py  baseline_with_hash.py  dataset.py  knn.py  losses.py  model.py  utils.py
utils/: memory_monitor.py
